[gd_scene load_steps=7 format=2]

[ext_resource path="res://system/WorldMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://system/title_screen/TitleScreenPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/PennyPitchers.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://system/title_screen/TitleScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 4
extra_spacing_space = 4
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 5 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuVBox" type="VBoxContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 216.0
margin_right = -320.0
margin_bottom = -152.0
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Menu/MenuVBox"]
margin_right = 384.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Penny Pitcher"
align = 1
valign = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="Menu/MenuVBox"]
margin_left = 134.0
margin_top = 132.0
margin_right = 250.0
margin_bottom = 232.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 8
alignment = 1

[node name="StartButton" type="Button" parent="Menu/MenuVBox/ButtonsVBox"]
margin_top = 3.0
margin_right = 116.0
margin_bottom = 29.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
text = "Start"
flat = true

[node name="InstructionsButton" type="Button" parent="Menu/MenuVBox/ButtonsVBox"]
margin_top = 37.0
margin_right = 116.0
margin_bottom = 63.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
text = "Instructions"
flat = true

[node name="QuitButton" type="Button" parent="Menu/MenuVBox/ButtonsVBox"]
margin_top = 71.0
margin_right = 116.0
margin_bottom = 97.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
text = "Quit"
flat = true

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 320 )
[connection signal="button_up" from="Menu/MenuVBox/ButtonsVBox/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="Menu/MenuVBox/ButtonsVBox/InstructionsButton" to="." method="_on_InstructionsButton_button_up"]
[connection signal="button_up" from="Menu/MenuVBox/ButtonsVBox/QuitButton" to="." method="_on_QuitButton_button_up"]
